--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGO_URL = mongodb+srv://tolqinmirsaliyev:baliq06011991@cluster0.3ewxg9n.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://tolqinmirsaliyev:baliq06011991@cluster0.3ewxg9n.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = MirsaliyevTolqin06011991
